RESOLVED FIXED37011
Position::primaryDirection() should not use its own accessor.
https://bugs.webkit.org/show_bug.cgi?id=37011
Summary Position::primaryDirection() should not use its own accessor.
Hajime Morrita
Reported 2010-04-01 22:23:45 PDT
Position::primaryDirection() uses Position::node(), which should be replaced with accessing Position::m_anchorNode directly. This bug is to take the feedback on Bug 36948, whose patch was accidentally landed before tiny cleanup.
Attachments
v0; small cleanup only (1.27 KB, patch)
2010-04-01 22:28 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2010-04-01 22:28:16 PDT
Created attachment 52379 [details] v0; small cleanup only
Eric Seidel (no email)
Comment 2 2010-04-01 23:41:41 PDT
Comment on attachment 52379 [details] v0; small cleanup only Why is this better?
Alexey Proskuryakov
Comment 3 2010-04-02 16:21:06 PDT
Comment on attachment 52379 [details] v0; small cleanup only r=me That's just the preferred style. One thing this helps with is making debugging easier - you don't need to step into accessor functions that much.
WebKit Commit Bot
Comment 4 2010-04-02 17:38:34 PDT
Comment on attachment 52379 [details] v0; small cleanup only Clearing flags on attachment: 52379 Committed r57037: <http://trac.webkit.org/changeset/57037>
WebKit Commit Bot
Comment 5 2010-04-02 17:38:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.