2010-04-02  MORITA Hajime  <morrita@google.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=37011
        Position::primaryDirection() should not use its own accessor.

        No new tests. This is small clenaup with no behaviour change.

        * dom/Position.cpp:
        (WebCore::Position::primaryDirection):

Canonical link: https://commits.webkit.org/48330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57037 268f45cc-cd09-0410-ab3c-d52691b4dbfc